# cortex-context

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  cortex.config.yaml  docker-compose.yml  pyproject.toml  run.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  cleanup-packages.yml  docker-publish.yml
app/: config.py  main.py
app/core/: chunker.py  dimension_loader.py  embedder.py  graph_builder.py  parser_registry.py
app/core/parsers/: agents_md_parser.py  base.py  manifest.py  spec_parser.py  temporal_workflow_yaml_parser.py
app/core/parsers/builtin/: agents_manifest.py  markdown_frontmatter.py
app/db/: neo4j.py
app/dimensions/: adr.yaml  service.yaml  spec.yaml  temporal_workflow.yaml  workflow.yaml
app/ingestor/: cli.py  graph_builder.py  ingest_pipeline.py  relationship_builder.py  spec_parser.py
app/models/: spec.py
app/plugins/: loader.py
app/routes/: health.py  ingest.py  nodes.py  query.py  semantic.py  services.py  workflows.py
deploy/: cortex.service
docs/: DIMENSION-SCHEMA.md  ZFS-SNAPSHOT-RECOVERY.md
docs/landing/: index.html
scripts/: deploy-landing.sh  deploy.sh  ingest.sh
tests/: test_graph_builder_bitemporal.py  test_markdown_frontmatter_parser.py  test_temporal_workflow_yaml_parser.py
