[project]
name = "cortex-context"
version = "0.0.1"
description = "Cortex — Product Knowledge Graph (GraphRAG + Vector RAG) para contextualização de produto"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "neo4j>=5.20.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "typer>=0.12.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
]
# Embeddings locais (offline, ~22MB, 384 dims — sem GPU necessária)
# Instalar com: pip install "cortex-context[embeddings-local]"
embeddings-local = ["sentence-transformers>=2.7.0"]
# Embeddings via OpenAI API (1536 dims — requer OPENAI_API_KEY)
# Instalar com: pip install "cortex-context[embeddings-openai]"
embeddings-openai = ["openai>=1.30.0"]
# Prometheus metrics endpoint (/metrics)
# Instalar com: pip install "cortex-context[metrics]"
# Em produção, instalar junto com o pacote base.
metrics = ["prometheus-client>=0.20.0"]

[project.scripts]
cortex-ingest = "cortex.ingestor.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 150
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E402"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["F401", "F811", "F841"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
